--- a/TV Shows.html
+++ b/TV Shows.html
@@ -82,6 +82,16 @@
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
+         <div class="horizontal-container">
+            <div class="image-item">
+                <img alt="911" height="234" src="911.jpeg" width="149">
+                <div class="image-title">The 911</div>
+            </div>
+            
+            <div class="image-item">
+                <img alt="KingKong" height="234" src="" width="149">
+                <div class="image-title">King-Kong vs Godzilla</div>
+            </div>
     </header>
   
     <footer>
