--- a/TV Shows.html
+++ b/TV Shows.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-    <title>Feedback</title>
+    <title>TV Shows</title>
     <style>
         /* CSS code for background video */
         #bg-video {
