Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -175,6 +175,48 @@
                 <figcaption><a href="w2k.html">Wrestling 2K</a></figcaption>
             </figure>
         </a>
+        <a href="#" onclick="toggleGameInfo('game-info-5')">
+            <figure class="game-image">
+                <img alt="GTA 5" height="234"src="gt.jpeg" width="149"/>
+                <figcaption><a href="w2k.html">GTA 5</a></figcaption>
+            </figure>
+        </a>
+        <a href="#" onclick="toggleGameInfo('game-info-5')">
+            <figure class="game-image">
+                <img alt="GRID 2" height="234"src="grid2.jpeg" width="149"/>
+                <figcaption><a href="w2k.html">GRID 2</a></figcaption>
+            </figure>
+        </a>
+        <a href="#" onclick="toggleGameInfo('game-info-5')">
+            <figure class="game-image">
+                <img alt="Need Fpr Speed Hot Pursuit" height="234"src="hot.jpeg" width="149"/>
+                <figcaption><a href="w2k.html">Need For Speed Hot Pursuit</a></figcaption>
+            </figure>
+        </a>
+        <a href="#" onclick="toggleGameInfo('game-info-5')">
+            <figure class="game-image">
+                <img alt="Need for Speed" height="234"src="ned.jpeg" width="149"/>
+                <figcaption><a href="w2k.html">Need For Speed</a></figcaption>
+            </figure>
+        </a>
+        <a href="#" onclick="toggleGameInfo('game-info-5')">
+            <figure class="game-image">
+                <img alt="Mortal Kombat" height="234"src="mort.jpeg" width="149"/>
+                <figcaption><a href="w2k.html">Mortal Kombat</a></figcaption>
+            </figure>
+        </a>
+        <a href="#" onclick="toggleGameInfo('game-info-5')">
+            <figure class="game-image">
+                <img alt="Need For Speed" height="234"src="nfs.jpeg" width="149"/>
+                <figcaption><a href="w2k.html">Need For Speed</a></figcaption>
+            </figure>
+        </a>
+        <a href="#" onclick="toggleGameInfo('game-info-5')">
+            <figure class="game-image">
+                <img alt="UFC" height="234"src="ufc.jpeg" width="149"/>
+                <figcaption><a href="w2k.html">UFC</a></figcaption>
+            </figure>
+        </a>
     </div>
 
     <!-- JavaScript to toggle game info -->
