--- a/TV Shows.html
+++ b/TV Shows.html
@@ -33,33 +33,28 @@
         }
 
         nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
-            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            text-align: center;
         }
 
         nav ul {
-            list-style: none;
-            margin: 0;
+            list-style-type: none;
             padding: 0;
-            display: flex;
+            margin: 0;
         }
 
         nav ul li {
+            display: inline;
             margin-right: 20px;
-        }
-
-        nav ul li:last-child {
-            margin-right: 0;
         }
 
         nav ul li a {
             color: white;
             text-decoration: none;
         }
-        
+
         /* CSS for horizontal container */
         .horizontal-container {
             display: flex;
@@ -103,34 +98,35 @@
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
-         <div class="horizontal-container">
+        <div class="horizontal-container">
             <div class="image-item">
                 <img alt="911" src="911.jpeg">
                 <div class="image-title">The 911</div>
             </div>
-            
+
             <div class="image-item">
                 <img alt="FBI" src="FBI.jpeg">
                 <div class="image-title">The FBI</div>
             </div>
-              <div class="image-item">
+            <div class="image-item">
                 <img alt="Beacon 3" src="beac.jpeg">
                 <div class="image-title">The Beacon</div>
             </div>
-              <div class="image-item">
+            <div class="image-item">
                 <img alt="Bloods" src="bloods.jpeg">
                 <div class="image-title">The Bloods</div>
-            </div> <div class="image-item">
+            </div>
+            <div class="image-item">
                 <img alt="The Neighborhood" src="hood.jpeg">
                 <div class="image-title">The Neghborhood</div>
             </div>
-              <div class="image-item">
+            <div class="image-item">
                 <img alt="FBI" src=".jpeg">
                 <div class="image-title">The FBI</div>
             </div>
-         </div>
+        </div>
     </header>
-  
+
     <footer>
         <ul class="social-media-icons">
             <li><a href="#"><img src="whatsapp.png" alt="WhatsApp"></a></li>
