--- a/feedback.html
+++ b/feedback.html
@@ -33,26 +33,21 @@
         }
 
         nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
-            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            text-align: center;
         }
 
         nav ul {
-            list-style: none;
-            margin: 0;
+            list-style-type: none;
             padding: 0;
-            display: flex;
+            margin: 0;
         }
 
         nav ul li {
+            display: inline;
             margin-right: 20px;
-        }
-
-        nav ul li:last-child {
-            margin-right: 0;
         }
 
         nav ul li a {
