Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -126,6 +126,9 @@
     <!-- Content -->
     <header>      
         <nav>
+             <a href="#top">
+                <img alt="logo" height="90" src="Screenshot 2024-04-12 160015.png" width="100">
+            </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="movies.html">Movies</a></li>
