--- a/movies.html
+++ b/movies.html
@@ -109,11 +109,17 @@
             max-width: 100%;
             max-height: 100%;
         }
-         nav ul {
-            margin: 0;
-            padding: 0;
-            list-style: none;
+         nav {
+            background-color: #333;
+            color: white;
+            padding: 20px;
             text-align: center;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
         }
 
         nav ul li {
@@ -124,14 +130,6 @@
         nav ul li a {
             color: white;
             text-decoration: none;
-            font-weight: bold;
-            font-size: 18px;
-            transition: color 0.3s;
-        }
-
-        nav ul li a:hover {
-            color: #007bff;
-        }
     </style>
 </head>
 
