--- a/index.html
+++ b/index.html
@@ -91,11 +91,17 @@
         }
 
         /* Styling for navigation bar */
-        nav ul {
-            margin: 0;
-            padding: 0;
-            list-style: none;
+       nav {
+            background-color: #333;
+            color: white;
+            padding: 20px;
             text-align: center;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
         }
 
         nav ul li {
@@ -106,14 +112,6 @@
         nav ul li a {
             color: white;
             text-decoration: none;
-            font-weight: bold;
-            font-size: 18px;
-            transition: color 0.3s;
-        }
-
-        nav ul li a:hover {
-            color: #007bff;
-        }
     </style>
 </head>
 
