--- a/games & apps.html
+++ b/games & apps.html
@@ -22,11 +22,17 @@
         }
 
         /* Styling for navigation bar */
-        nav ul {
-            margin: 0;
-            padding: 0;
-            list-style: none;
+        nav {
+            background-color: #333;
+            color: white;
+            padding: 20px;
             text-align: center;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
         }
 
         nav ul li {
@@ -37,13 +43,6 @@
         nav ul li a {
             color: white;
             text-decoration: none;
-            font-weight: bold;
-            font-size: 18px;
-            transition: color 0.3s;
-        }
-
-        nav ul li a:hover {
-            color: #007bff;
         }
 
         /* Styling for game list */
