--- a/movies.html
+++ b/movies.html
@@ -109,11 +109,13 @@
             max-width: 100%;
             max-height: 100%;
         }
-         nav {
+        
+        /* Navigation Styling */
+        nav {
             background-color: #333;
             color: white;
-            padding: 20px;
             text-align: center;
+            padding: 20px;
         }
 
         nav ul {
@@ -130,6 +132,17 @@
         nav ul li a {
             color: white;
             text-decoration: none;
+        }
+
+        /* Logo Styling */
+        .logo {
+            text-align: center;
+        }
+
+        .logo img {
+            max-width: 100px;
+            max-height: 100px;
+        }
     </style>
 </head>
 
@@ -143,12 +156,14 @@
     <!-- Content -->
     <div class="content">
         <header>
-            <figure style="background-color: rgba(255, 255, 255, 0.5); padding: 10px;">
+            <!-- Logo -->
+            <div class="logo">
                 <a href="#top">
-                    <img alt="logo" height="90" src="Screenshot 2024-04-12 160015.png" width="100">
+                    <img alt="logo" src="Screenshot 2024-04-12 160015.png">
                 </a>
-            </figure>
+            </div>
 
+            <!-- Navigation -->
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
