--- a/movies.html
+++ b/movies.html
@@ -109,13 +109,13 @@
             max-width: 100%;
             max-height: 100%;
         }
-        
+
         /* Navigation Styling */
         nav {
             background-color: #333;
             color: white;
-            text-align: center;
             padding: 20px;
+            text-align: center;
         }
 
         nav ul {
@@ -137,6 +137,7 @@
         /* Logo Styling */
         .logo {
             text-align: center;
+            margin-bottom: 20px;
         }
 
         .logo img {
@@ -276,6 +277,7 @@
         </div>
 
     </div>
+
 
     <footer>
         <ul class="social-media-icons">
