--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             max-height: 100%;
         }
 
-         /* Styling for navigation bar */
+        /* Styling for navigation bar */
         nav {
             background-color: #333;
             color: white;
@@ -132,6 +132,7 @@
                 </a>
             </figure>
 
+            <!-- Navigation -->
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
