--- a/index.html
+++ b/index.html
@@ -92,27 +92,30 @@
 
         /* Styling for navigation bar */
         nav {
-            background-color: #333;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
 
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex; /* Use flexbox to align items */
+    justify-content: center; /* Horizontally center items */
+}
 
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
 
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-        }
+nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+
     </style>
 </head>
 
