--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             color: white; /* Example color */
             padding-bottom: 80px; /* Adjust padding to accommodate the footer */
         }
+       /* Center the logo at the top */
+        header {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px 0; /* Add padding for spacing */
+       }
 
         /* Styling for search bar */
         .search-container {
