--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <title>Warner Bros Website</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
-        /* Styling for video background */
-        video {
+        /* CSS code for background video */
+        #bg-video {
             position: fixed;
-            right: 0;
-            bottom: 0;
+            top: 0;
+            left: 0;
             min-width: 100%;
             min-height: 100%;
             z-index: -1; /* Ensure the video stays behind other content */
+            object-fit: cover; /* Cover the entire viewport */
         }
-
         /* Styling for other elements */
         .content {
             position: relative; /* Ensure content stays above video */
@@ -99,30 +99,28 @@
 
         /* Styling for navigation bar */
         nav {
-    background-color: #333;
-    color: white;
-    padding: 20px;
-    text-align: center;
-}
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex; /* Use flexbox to align items */
-    justify-content: center; /* Horizontally center items */
-}
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
 
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
 
-nav ul li a {
-    color: white;
-    text-decoration: none;
-}
-
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+    </style>
     </style>
 </head>
 
