--- a/index.html
+++ b/index.html
@@ -99,10 +99,8 @@
 
         /* Styling for navigation bar */
         nav {
-            background-color: #333;
-            color: white;
-            padding: 20px;
-            text-align: center;
+            background-color: rgba(255, 255, 255, 0.5);
+            padding: 10px;
         }
 
         nav ul {
@@ -117,7 +115,7 @@
         }
 
         nav ul li a {
-            color: white;
+            color: black;
             text-decoration: none;
         }
     </style>
