--- a/index.html
+++ b/index.html
@@ -23,13 +23,45 @@
             color: white; /* Example color */
             padding-bottom: 80px; /* Adjust padding to accommodate the footer */
         }
-       /* Center the logo at the top */
+
+        /* Styling for navigation bar */
+        nav {
+            background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent background */
+            padding: 10px 0; /* Add padding top and bottom */
+            text-align: center;
+            position: fixed; /* Fixed position at the top */
+            top: 0;
+            width: 100%;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
+
+        nav ul li a {
+            color: black;
+            text-decoration: none;
+            padding: 5px 10px; /* Padding for each navigation link */
+            border-radius: 5px; /* Rounded corners */
+        }
+
+        nav ul li a:hover {
+            background-color: lightgrey; /* Light grey background on hover */
+        }
+
+        /* Center the logo at the top */
         header {
             display: flex;
             justify-content: center;
-            align-items: center;
-            padding: 20px 0; /* Add padding for spacing */
-       }
+            padding: 20px 0; /* Add padding top and bottom */
+        }
 
         /* Styling for search bar */
         .search-container {
@@ -96,59 +128,35 @@
             max-width: 100%;
             max-height: 100%;
         }
-
-        /* Styling for navigation bar */
-        nav {
-            background-color: rgba(255, 255, 255, 0.5);
-            padding: 10px;
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-
-        nav ul li a {
-            color: black;
-            text-decoration: none;
-        }
-    </style>
     </style>
 </head>
 
 <body>
     <!-- Video Background -->
-    <video autoplay loop muted>
+    <video autoplay loop muted id="bg-video">
         <source src="48569-454825064_small.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
     <!-- Content -->
     <div class="content">
-        <header>
-            <figure style="background-color: rgba(255, 255, 255, 0.5); padding: 10px;">
-                <a href="#top">
-                    <img alt="logo" height="90" src="Screenshot 2024-04-12 160015.png" width="100">
-                </a>
-            </figure>
+        <!-- Navigation -->
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="movies.html">Movies</a></li>
+                <li><a href="TV Shows.html">TV Shows</a></li>
+                <li><a href="games & apps.html">Games & Apps</a></li>
+                <li><a href="collections.html">Collections</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
+            </ul>
+        </nav>
 
-            <!-- Navigation -->
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="movies.html">Movies</a></li>
-                    <li><a href="TV Shows.html">TV Shows</a></li>
-                    <li><a href="games & apps.html">Games & Apps</a></li>
-                    <li><a href="collections.html">Collections</a></li>
-                    <li><a href="feedback.html">Feedback</a></li>
-                </ul>
-            </nav>
+        <!-- Logo -->
+        <header>
+            <figure>
+                <img alt="logo" src="Screenshot 2024-04-12 160015.png" height="90" width="100">
+            </figure>
         </header>
 
         <!-- Search Bar -->
