--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             z-index: 1;
             color: white; /* Example color */
             padding-bottom: 80px; /* Adjust padding to accommodate the footer */
+            text-align: center; /* Center text */
         }
 
         /* Styling for navigation bar */
@@ -29,9 +30,6 @@
             background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent background */
             padding: 10px 0; /* Add padding top and bottom */
             text-align: center;
-            position: fixed; /* Fixed position at the top */
-            top: 0;
-            width: 100%;
         }
 
         nav ul {
@@ -67,11 +65,6 @@
         .search-container {
             text-align: center;
             margin-top: 20px;
-            position: absolute; /* Position relative to the viewport */
-            top: 50%; /* Center vertically */
-            left: 50%; /* Center horizontally */
-            transform: translate(-50%, -50%); /* Center the container */
-            z-index: 2; /* Ensure the search bar is above the video */
         }
 
         .search-container input[type="text"] {
@@ -140,6 +133,13 @@
 
     <!-- Content -->
     <div class="content">
+        <!-- Logo -->
+        <header>
+            <figure>
+                <img alt="logo" src="Screenshot 2024-04-12 160015.png" height="90" width="100">
+            </figure>
+        </header>
+
         <!-- Navigation -->
         <nav>
             <ul>
@@ -151,13 +151,6 @@
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
-
-        <!-- Logo -->
-        <header>
-            <figure>
-                <img alt="logo" src="Screenshot 2024-04-12 160015.png" height="90" width="100">
-            </figure>
-        </header>
 
         <!-- Search Bar -->
         <div class="search-container">
