--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             list-style-type: none;
             padding: 0;
             margin: 0;
+            text-align: center; /* Center text */
         }
 
         nav ul li {
