--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         /* Styling for navigation bar */
         nav {
-            background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent background */
+            background-color: lightgrey; /* Light grey background color for the navigation */
             padding: 10px 0; /* Add padding top and bottom */
             text-align: center;
         }
