--- a/collections.html
+++ b/collections.html
@@ -196,9 +196,10 @@
                 <a href="lift.html"><img alt="lift.jpeg" height="234" src="lift.jpeg" width="149"></a>
                 <div class="image-title">The Lift</div>
             </div>
+            <h>Top 5 Games and Apps</h>
             <div class="image-item">
-                <a href="expend.html"><img alt="expend.jpeg" height="234" src="expend.jpeg" width="149"></a>
-                <div class="image-title">The Expend4bles</div>
+                <a href="froza.html"><img alt="froza" height="234" src="froza.jpeg" width="149"></a>
+                <div class="image-title">Froza Horizon 5</div>
             </div>
             <div class="image-item">
                 <a href="dune.html"><img alt="dune.jpeg" height="234" src="dune.jpeg" width="149"></a>
