--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <body>
     <!-- Video Background -->
     <video autoplay loop muted id="bg-video">
-        <source src="48569-454825064_small.mp4" type="video/mp4">
+        <source src="background.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
