--- a/bee.html
+++ b/bee.html
@@ -1,27 +1,42 @@
-
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="UTF-8">
     <title>Warner Bros Website</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+        /* CSS code for background video */
+        #bg-video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            min-width: 100%;
+            min-height: 100%;
+            z-index: -1; /* Ensure the video stays behind other content */
+            object-fit: cover; /* Cover the entire viewport */
+        }
+        /* Styling for other elements */
+        .content {
+            position: relative; /* Ensure content stays above video */
+            z-index: 1;
+            color: white; /* Example color */
+            padding-bottom: 80px; /* Adjust padding to accommodate the footer */
+            text-align: center; /* Center text */
         }
 
-        header {
-            background-color: #333;
-            color: white;
-            padding: 20px;
+        /* Styling for navigation bar */
+        nav {
+            background-color: lightgrey; /* Light grey background color for the navigation */
+            padding: 10px 0; /* Add padding top and bottom */
             text-align: center;
         }
 
         nav ul {
             list-style-type: none;
             padding: 0;
+            margin: 0;
+            text-align: center; /* Center text */
         }
 
         nav ul li {
@@ -30,46 +45,103 @@
         }
 
         nav ul li a {
-            color: white;
+            color: black;
             text-decoration: none;
+            padding: 5px 10px; /* Padding for each navigation link */
+            border-radius: 5px; /* Rounded corners */
         }
 
-        .image-grid {
-            display: grid;
-            grid-template-columns: auto 1fr;
-            grid-gap: 20px;
-            padding: 20px;
+        nav ul li a:hover {
+            background-color: lightgrey; /* Light grey background on hover */
         }
 
-        .image-item img {
+        /* Center the logo at the top */
+        header {
+            display: flex;
+            justify-content: center;
+            padding: 20px 0; /* Add padding top and bottom */
+        }
+
+        /* Styling for search bar */
+        .search-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .search-container input[type="text"] {
+            padding: 8px;
+            width: 300px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+
+        .search-container button {
+            padding: 8px 15px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        /* Styling for footer */
+        footer {
+            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            position: fixed; /* Position fixed at the bottom */
+            bottom: 0;
             width: 100%;
-            height: auto;
-            max-width: 400px;
-            display: block;
-            margin: 0 auto;
+            z-index: 3; /* Ensure the footer is above the video */
         }
 
-        .image-title {
-            font-size: 24px;
-            font-weight: bold;
-            margin-top: 10px;
+        .social-media-icons {
+            list-style: none;
+            padding: 0;
+            margin: 0;
         }
 
-        .about {
-            padding: 20px;
+        .social-media-icons li {
+            display: inline;
+            margin: 0 10px;
         }
 
-        .about p {
-            margin-bottom: 20px;
-            line-height: 1.5;
+        .social-media-icons li a {
+            display: inline-block;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: #fff;
+            line-height: 40px;
+            text-align: center;
+        }
+
+        .social-media-icons li a img {
+            vertical-align: middle;
+            max-width: 100%;
+            max-height: 100%;
         }
     </style>
 </head>
 
 <body>
-    <header>
-        <a href="#top">
-            <img alt="Screenshot 2024-04-12 160015.png" height="90" src="Screenshot 2024-04-12 160015.png" width="100"></a>
+    <!-- Video Background -->
+    <video autoplay loop muted id="bg-video">
+        <source src="background.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
+    <!-- Content -->
+    <div class="content">
+        <!-- Logo -->
+        <header>
+            <figure>
+                <img alt="logo" src="Screenshot 2024-04-12 160015.png" height="90" width="100">
+            </figure>
+        </header>
+
+        <!-- Navigation -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -88,13 +160,13 @@
         </div>
         <div class="about">
             <p>The Beekeeper is a 2024 American action thriller film directed by David Ayer and written by Kurt Wimmer. The film stars Jason Statham, Emmy Raver-Lampman, Josh Hutcherson, Bobby Naderi, Phylicia Rashad, Jemma Redgrave and Jeremy Irons. When his good-hearted landlady commits suicide after losing her charity's funds to a phishing scam, former "Beekeeper" operative Adam Clay sets out on a brutal campaign for revenge upon those responsible.</p>
-            <p>6.4/10 (77K)
-Director: David Ayer
-Writer: Kurt Wimmer
-Stars: Jason Statham, Emmy Raver-Lampman, Bobby Naderi
-Genre: Action, Thriller
-Release Date: 2024-01-12
-One man's brutal campaign for vengeance takes on national stakes after he is revealed to be a former operative of a powerful and clandestine organization known as "Beekeepers."</p>
+            <p>6.4/10 (77K)</p>
+            <p>Director: David Ayer</p>
+           <p>Writer: Kurt Wimmer</p>
+           <p>Stars: Jason Statham, Emmy Raver-Lampman, Bobby Naderi</p>
+           <p>Genre: Action, Thriller</p>
+           <p>Release Date: 2024-01-12</p>
+<p>One man's brutal campaign for vengeance takes on national stakes after he is revealed to be a former operative of a powerful and clandestine organization known as "Beekeepers."</p>
         <p>Watch The Trailer</p>
             <iframe width="958" height="539" src="https://www.youtube.com/embed/d92ht770AQ8" title="THE BEEKEEPER Official Trailer (2024) Jason Statham, Action Movie HD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
