--- a/TV Shows.html
+++ b/TV Shows.html
@@ -127,19 +127,17 @@
         </div>
     </header>
 
+    <!-- Footer -->
     <footer>
         <ul class="social-media-icons">
-            <li><a href="#"><img src="whatsapp.png" alt="WhatsApp"></a></li>
-            <li><a href="#"><img src="tiktok.png" alt="TikTok"></a></li>
-            <li><a href="#"><img src="twitter.png" alt="Twitter"></a></li>
-            <li><a href="#"><img src="instagram.png" alt="Instagram"></a></li>
+            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
+            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
+            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
+            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
+            <!-- Add more social media icons as needed -->
         </ul>
-        <p>&copy; 2024 Your Website. All rights reserved.</p>
+        <p>&copy; 2024 Warner Bros Website. All rights reserved.</p>
     </footer>
-
-    <script>
-        // JavaScript code can be added here for form submission handling or other functionality
-    </script>
 </body>
 
 </html>
