--- a/movies.html
+++ b/movies.html
@@ -4,7 +4,6 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <title>Movies</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
         /* General Styles */
         body {
@@ -150,7 +149,7 @@
 <body>
     <!-- Video Background -->
     <video autoplay loop muted>
-        <source src="48569-454825064_small.mp4" type="video/mp4">
+        <source src="background.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
@@ -279,6 +278,7 @@
     </div>
 
 
+    <!-- Footer -->
     <footer>
         <ul class="social-media-icons">
             <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
@@ -287,7 +287,7 @@
             <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
             <!-- Add more social media icons as needed -->
         </ul>
-        <p>&copy; 2024 Your Website. All rights reserved.</p>
+        <p>&copy; 2024 Warner Bros Website. All rights reserved.</p>
     </footer>
 </body>
 
