--- a/games & apps.html
+++ b/games & apps.html
@@ -3,29 +3,32 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Games & Apps</title>
+    <title>Warner Bros Website</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
-        /* Styling for video background */
-        video {
+        /* CSS code for background video */
+        #bg-video {
             position: fixed;
-            right: 0;
-            bottom: 0;
+            top: 0;
+            left: 0;
             min-width: 100%;
             min-height: 100%;
             z-index: -1; /* Ensure the video stays behind other content */
+            object-fit: cover; /* Cover the entire viewport */
         }
-
-        /* Styling for header */
-        header {
-            position: relative;
-            z-index: 2; /* Ensure header is above video */
+        /* Styling for other elements */
+        .content {
+            position: relative; /* Ensure content stays above video */
+            z-index: 1;
+            color: white; /* Example color */
+            padding-bottom: 80px; /* Adjust padding to accommodate the footer */
+            text-align: center; /* Center text */
         }
 
         /* Styling for navigation bar */
         nav {
-            background-color: #333;
-            color: white;
-            padding: 20px;
+            background-color: lightgrey; /* Light grey background color for the navigation */
+            padding: 10px 0; /* Add padding top and bottom */
             text-align: center;
         }
 
@@ -33,6 +36,7 @@
             list-style-type: none;
             padding: 0;
             margin: 0;
+            text-align: center; /* Center text */
         }
 
         nav ul li {
@@ -41,76 +45,59 @@
         }
 
         nav ul li a {
-            color: white;
+            color: black;
             text-decoration: none;
+            padding: 5px 10px; /* Padding for each navigation link */
+            border-radius: 5px; /* Rounded corners */
         }
 
-        /* Styling for game list */
-        .game-list {
-            margin-top: 20px;
+        nav ul li a:hover {
+            background-color: lightgrey; /* Light grey background on hover */
+        }
+
+        /* Center the logo at the top */
+        header {
             display: flex;
-            flex-wrap: wrap;
             justify-content: center;
-            align-items: center;
-            z-index: 2; /* Ensure game list is above video */
+            padding: 20px 0; /* Add padding top and bottom */
         }
-
-        .game-list a {
-            text-decoration: none;
-            color: inherit;
-            margin: 10px;
-            position: relative;
-        }
-
-        .game-image {
-            position: relative;
-            overflow: hidden;
-            width: 149px;
-            height: 234px;
-        }
-
-        .game-image img {
-            display: block;
-            width: 100%;
-            height: 100%;
-            transition: transform 0.3s;
-        }
-
-        .game-image figcaption {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 5px;
-            margin: 0;
+        /* Styling for footer */
+        footer {
+            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
             color: white;
-            font-weight: bold;
             text-align: center;
-            opacity: 0;
-            transition: opacity 0.3s;
+            padding: 20px 0;
+            position: fixed; /* Position fixed at the bottom */
+            bottom: 0;
+            width: 100%;
+            z-index: 3; /* Ensure the footer is above the video */
         }
 
-        .game-list a:hover .game-image figcaption {
-            opacity: 1;
+        .social-media-icons {
+            list-style: none;
+            padding: 0;
+            margin: 0;
         }
 
-        /* Styling for game info */
-        .game-info {
-            display: none;
-            position: absolute;
-            top: 100%;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: rgba(0, 0, 0, 0.8);
-            padding: 10px;
-            color: white;
-            width: 80%;
-            z-index: 3; /* Ensure game info is above other content */
+        .social-media-icons li {
+            display: inline;
+            margin: 0 10px;
         }
 
-        .game-list a:hover .game-info {
-            display: block;
+        .social-media-icons li a {
+            display: inline-block;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: #fff;
+            line-height: 40px;
+            text-align: center;
+        }
+
+        .social-media-icons li a img {
+            vertical-align: middle;
+            max-width: 100%;
+            max-height: 100%;
         }
     </style>
 </head>
@@ -140,7 +127,6 @@
     </header>
 
     <div class="game-list">
-        <a href="#" onclick="toggleGameInfo('game-info-1')">
             <figure class="game-image">
                <a href="froza.html"><img alt="Froza Horizon 5" height="234" src="froza.jpeg" width="149"></a>
                <figcaption>Froza Horizon 5</figcaption>
