--- a/froza.html
+++ b/froza.html
@@ -100,7 +100,7 @@
 <body>
     <!-- Video Background -->
     <video autoplay loop muted>
-        <source src="48569-454825064_small.mp4" type="video/mp4">
+        <source src="background.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
