--- a/TV Shows.html
+++ b/TV Shows.html
@@ -31,6 +31,32 @@
             padding: 20px;
             text-align: center;
         }
+         .social-media-icons {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .social-media-icons li {
+            display: inline;
+            margin: 0 10px;
+        }
+
+        .social-media-icons li a {
+            display: inline-block;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: #fff;
+            line-height: 40px;
+            text-align: center;
+        }
+
+        .social-media-icons li a img {
+            vertical-align: middle;
+            max-width: 100%;
+            max-height: 100%;
+        }
 
         nav {
             background-color: #333;
