--- a/blue.html
+++ b/blue.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Warner Bros Website</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <style>
         /* CSS code for background video */
         #bg-video {
@@ -24,37 +25,6 @@
             padding-bottom: 80px; /* Adjust padding to accommodate the footer */
             text-align: center; /* Center text */
         }
-
-        /* Styling for navigation bar */
-        nav {
-            background-color: lightgrey; /* Light grey background color for the navigation */
-            padding: 10px 0; /* Add padding top and bottom */
-            text-align: center;
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-            text-align: center; /* Center text */
-        }
-
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-
-        nav ul li a {
-            color: black;
-            text-decoration: none;
-            padding: 5px 10px; /* Padding for each navigation link */
-            border-radius: 5px; /* Rounded corners */
-        }
-
-        nav ul li a:hover {
-            background-color: lightgrey; /* Light grey background on hover */
-        }
-
         /* Center the logo at the top */
         .logo {
             padding: 20px 0; /* Add padding top and bottom */
