--- a/TV Shows.html
+++ b/TV Shows.html
@@ -4,7 +4,7 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <title>TV Shows</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
     <!-- Background Video -->
@@ -28,7 +28,7 @@
         </nav>
         <div class="horizontal-container">
             <div class="image-item">
-                <img alt="911" src="911.jpeg">
+               <img alt="911" src="images/911.jpeg">
                 <div class="image-title">The 911</div>
             </div>
 
