--- a/TV Shows.html
+++ b/TV Shows.html
@@ -85,7 +85,7 @@
 
         /* Navigation */
         nav {
-            background-color: #333;
+            background-color: (0, 0, 0, 0.5);
             color: white;
             padding: 20px;
             text-align: center;
@@ -93,8 +93,8 @@
             position: fixed;
             width: 100%;
             top: 0;
-            z-index: 1000;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add shadow for separation */
+            
+            
         }
 
         nav ul {
@@ -144,7 +144,6 @@
                 <img alt="911" src="images/911.jpeg">
                 <div class="image-title">The 911</div>
             </div>
-
             <div class="image-item">
                 <img alt="FBI" src="images/FBI.jpeg">
                 <div class="image-title">The FBI</div>
