--- a/TV Shows.html
+++ b/TV Shows.html
@@ -170,10 +170,10 @@
     <!-- Footer -->
     <footer>
         <ul class="social-media-icons">
-            <li><a href="#"><img src="images/whATSP.png" alt="WhatsApp"></a></li>
-            <li><a href="#"><img src="images/TIKTOK.jpeg" alt="TikTok"></a></li>
-            <li><a href="#"><img src="images/TWITTER.jpeg" alt="Twitter"></a></li>
-            <li><a href="#"><img src="images/IG.png" alt="Instagram"></a></li>
+           <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
+            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
+            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
+            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
             <!-- Add more social media icons as needed -->
         </ul>
         <p>&copy; 2024 !Join our community today!Stay connected with us,Discover more on our socials:> Explore our latest updates:Follow us for exclusive content. Experience the world of [Warner Bros]. Your feedback matters to us! Let's create something amazing together!.</p>
