--- a/dune.html
+++ b/dune.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -91,6 +90,15 @@
             <p>The Flash premiered at Grauman's Chinese Theatre in Hollywood, Los Angeles, on June 12, 2023, and was released in the United States on June 16, following multiple delays caused by director changes, the COVID-19 pandemic, post-production setbacks, and Miller's legal issues. The film received mixed reviews from critics, who praised its humor, action sequences, and the performances, but criticized the visual effects and third act. It was also a box-office bomb, grossing $271.3 million worldwide against a budget of $200–220 million.</p>
         </div>
     </div>
+<footer>
+        <ul class="social-media-icons">
+           <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
+            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
+            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
+            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
+            <!-- Add more social media icons as needed -->
+        </ul>
+        <p>&copy; 2024 !Join our community today!Stay connected with us,Discover more on our socials:> Explore our latest updates:Follow us for exclusive content. Experience the world of [Warner Bros]. Your feedback matters to us! Let's create something amazing together!.</p>
+    </footer>
 </body>
-
 </html>
