--- a/eqaul.html
+++ b/eqaul.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -91,6 +90,15 @@
             <p>The Equalizer 3 was released in the United States on September 1, 2023 by Sony Pictures Releasing. The film received generally positive reviews from critics and was a commercial success, grossing $191 million worldwide against a $70 million budget.</p>
         </div>
     </div>
+<footer>
+        <ul class="social-media-icons">
+           <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
+            <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
+            <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
+            <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
+            <!-- Add more social media icons as needed -->
+        </ul>
+        <p>&copy; 2024 !Join our community today!Stay connected with us,Discover more on our socials:> Explore our latest updates:Follow us for exclusive content. Experience the world of [Warner Bros]. Your feedback matters to us! Let's create something amazing together!.</p>
+    </footer>
 </body>
-
 </html>
