--- a/TV Shows.html
+++ b/TV Shows.html
@@ -62,10 +62,9 @@
         }
 
         .image-item img {
-            height: 234px;
-            width: 149px;
-            border-radius: 10px; /* Rounded corners for images */
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Add shadow for depth */
+            height: 150px; /* Adjusted height for footer images */
+            width: auto; /* Maintain aspect ratio */
+            border-radius: 50%; /* Circular shape for images */
         }
 
         .image-title {
@@ -164,12 +163,11 @@
             <img alt="FBI" src="images/FBI.jpeg">
             <div class="image-title">The FBI</div>
         </div>
-    </div>
 
     <!-- Footer -->
     <footer>
         <ul class="social-media-icons">
-           <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
+            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
             <li><a href="#"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
             <li><a href="#"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
             <li><a href="#"><img src="IG.png" alt="Instagram"></a></li>
