--- a/TV Shows.html
+++ b/TV Shows.html
@@ -141,7 +141,7 @@
     <div class="horizontal-container">
         <section class="image-section">
             <div class="image-item">
-                <img alt="911" src="911.jpeg">
+                <img alt="911" height="500"src="911.jpeg"width="750">
                 <div class="image-title">The 911</div>
             </div>
         </section>
