--- a/TV Shows.html
+++ b/TV Shows.html
@@ -137,11 +137,10 @@
             </ul>
         </nav>
     </header>
-
-    <div class="horizontal-container">
-        <section class="image-section">
+     <div class="horizontal-container">
+          <section class="image-section">
             <div class="image-item">
-                <img alt="911" height="500"src="911.jpeg"width="750">
+                <a href="911.html"><img alt="911" height="500" src="911.jpeg" width="750"></a>
                 <div class="image-title">The 911</div>
             </div>
         </section>
