--- a/blue.html
+++ b/blue.html
@@ -16,6 +16,9 @@
             z-index: -1; /* Ensure the video stays behind other content */
             object-fit: cover; /* Cover the entire viewport */
         }
+         nav ul li a:hover {
+            color: red; /* Changing text color to red on hover */
+        }
         
         /* Styling for other elements */
         .content {
