--- a/blur.html
+++ b/blur.html
@@ -1,3 +1,6 @@
+ nav ul li a:hover {
+            color: red; /* Changing text color to red on hover */
+        }
 <footer>
         <ul class="social-media-icons">
            <li><a href="#"><img src="whATSP.png" alt="WhatsApp"></a></li>
