--- a/feedback.html
+++ b/feedback.html
@@ -49,6 +49,9 @@ nav ul li a {
     color: white;
     text-decoration: none;
 }
+ nav ul li a:hover {
+  color: red; /* Changing text color to red on hover */
+}
 
 /* Additional CSS to style the form and footer */
 #feedback-form {
