--- a/joker.html
+++ b/joker.html
@@ -21,6 +21,7 @@
         nav ul {
             list-style-type: none;
             padding: 0;
+            margin: 0;
         }
 
         nav ul li {
@@ -31,6 +32,12 @@
         nav ul li a {
             color: white;
             text-decoration: none;
+            transition: color 0.3s; /* Adding a smooth transition for color change */
+        }
+
+        nav ul li a:hover {
+            color: red; /* Changing text color to red on hover */
+        
         }
 
         .image-grid {
