Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -27,17 +27,10 @@
         }
 
         /* Styling for navigation bar */
-        nav {
-            background-color: lightgrey; /* Light grey background color for the navigation */
-            padding: 10px 0; /* Add padding top and bottom */
-            text-align: center;
-        }
-
         nav ul {
             list-style-type: none;
             padding: 0;
             margin: 0;
-            text-align: center; /* Center text */
         }
 
         nav ul li {
@@ -46,14 +39,13 @@
         }
 
         nav ul li a {
-            color: black;
+            color: white;
             text-decoration: none;
-            padding: 5px 10px; /* Padding for each navigation link */
-            border-radius: 5px; /* Rounded corners */
+            transition: color 0.3s; /* Adding a smooth transition for color change */
         }
 
         nav ul li a:hover {
-            background-color: lightgrey; /* Light grey background on hover */
+            color: red; /* Changing text color to red on hover */
         }
 
         /* Center the logo at the top */
